# Coordinate

./: CMakeLists.txt  README.md  main.cpp
Core/: AxisCalculator.cpp  AxisCalculator.h  AxisSetter.cpp  AxisSetter.h  CalcAxis.cpp  CalcAxis.h  SetAxis.cpp  SetAxis.h
Data/: 3-4.pc  4-6.pc  input.txt  output.txt
Element/: Element.cpp  Element.h  Hexahedron.cpp  Hexahedron.h  Quadrilateral.cpp  Quadrilateral.h  Tetrahedron.cpp  Tetrahedron.h  Triangle.cpp  Triangle.h
Enum/: InputType.h  SetAxisMethod.h
IO/: AxisInfoWriter.cpp  AxisInfoWriter.h  CalculateAxis.cpp  CalculateAxis.h  ElementInfoReader.cpp  ElementInfoReader.h
UI/: Canvas.cpp  Canvas.h  InputDialog.cpp  InputDialog.h  MainWindow.cpp  MainWindow.h
Util/: Axis.cpp  Axis.h  Plane.cpp  Plane.h  Point.cpp  Point.h
